--- a/packages/contracts/payments/Cargo.toml
+++ b/packages/contracts/payments/Cargo.toml
@@ -23,6 +23,7 @@ serde-json-wasm = { workspace = true }
 serde_json = { workspace = true }
 thiserror = { workspace = true }
 cw-utils = { workspace = true }
+wavs-types = { workspace = true }
 
 [features]
 library = []
