--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,7 +10,15 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@cosmjs/amino": "^0.36.2",
+    "@cosmjs/crypto": "^0.36.2",
+    "@cosmjs/encoding": "^0.36.2",
+    "@cosmjs/proto-signing": "^0.36.2",
+    "@keplr-wallet/types": "^0.12.282",
     "@twa-dev/sdk": "^8.0.2",
+    "@walletconnect/sign-client": "^2.22.4",
+    "@walletconnect/types": "^2.22.4",
+    "@walletconnect/utils": "^2.22.4",
     "react": "^19.1.1",
     "react-dom": "^19.1.1"
   },
