--- a/packages/contracts/payments/Cargo.toml
+++ b/packages/contracts/payments/Cargo.toml
@@ -9,7 +9,8 @@ publish = false
 
 
 [lib]
-crate-type = ["cdylib"]
+crate-type = ["cdylib", "rlib"]
+doctest = false
 
 [dependencies]
 tg-contract-api = { workspace = true }
@@ -24,6 +25,9 @@ serde_json = { workspace = true }
 thiserror = { workspace = true }
 cw-utils = { workspace = true }
 wavs-types = { workspace = true }
+
+[dev-dependencies]
+cw-multi-test = { workspace = true }
 
 [features]
 library = []
