--- a/packages/utils/Cargo.toml
+++ b/packages/utils/Cargo.toml
@@ -17,6 +17,7 @@ multitest = ["dep:cw-multi-test"]
 climb_pool = ["dep:deadpool"]
 
 [dependencies]
+tg-contract-api = { workspace = true}
 wavs-types = { workspace = true }
 serde = { workspace = true }
 cosmwasm-std = { workspace = true }
