--- a/Cargo.toml
+++ b/Cargo.toml
@@ -70,6 +70,7 @@ ed25519-zebra = { version = "4.1.0", default-features = false, features = [
   "alloc",
 ] }
 k256 = { version = "0.13.4", default-features = false, features = ["ecdsa"] }
+bip39 = "2.2.0"
 
 # Serialization
 serde = { version = "1.0.219", features = ["derive"] }
@@ -132,3 +133,6 @@ http-body-util = "0.1.3"
 tower-http = { version = "0.6.6", features = ["cors", "trace"] }
 tower = { version = "0.5.2", features = ["util"] }
 url = "2.5.7"
+
+# Misc
+cfg-if = "1.0.4"
