--- a/packages/utils/Cargo.toml
+++ b/packages/utils/Cargo.toml
@@ -14,15 +14,20 @@ crate-type = ["cdylib", "rlib"]
 [features]
 default = []
 multitest = ["dep:cw-multi-test"]
-climb_pool = ["dep:deadpool"]
+on-chain = ["dep:deadpool", "dep:tokio", "dep:reqwest", "dep:toml"]
 
 [dependencies]
 tg-contract-api = { workspace = true}
-wavs-types = { workspace = true }
 serde = { workspace = true }
 cosmwasm-std = { workspace = true }
 layer-climb = { workspace = true }
 tracing = {workspace = true}
+cfg-if = {workspace = true}
 tracing-subscriber = {workspace = true}
+anyhow = {workspace = true}
+wavs-types = {workspace = true}
+toml = {workspace = true, optional = true}
+reqwest = {workspace = true, optional = true}
+tokio = {workspace = true, optional = true}
 deadpool = { workspace = true, optional = true }
 cw-multi-test = { workspace = true, optional = true }
