--- a/packages/cli/Cargo.toml
+++ b/packages/cli/Cargo.toml
@@ -8,12 +8,15 @@ repository.workspace = true
 
 [dependencies]
 tg-contract-api = { workspace = true }
-tg-utils = { workspace = true }
+tg-utils = { workspace = true, features = ["on-chain"] }
 tokio = {workspace = true}
 clap = {workspace = true}
 dotenvy = {workspace = true}
 rand = {workspace = true}
+serde = {workspace = true}
+serde_json = {workspace = true}
 anyhow = {workspace = true}
 wavs-types = {workspace = true}
 rustls = {workspace = true}
 tracing = {workspace = true}
+layer-climb = {workspace = true}
