--- a/taskfile/test.yml
+++ b/taskfile/test.yml
@@ -15,8 +15,11 @@ tasks:
     cmds:
       - echo "Testing {{.CONTRACT}} off-chain"
       - cd packages/tests/off-chain && cargo test --test {{.CONTRACT_SRC_NAME}}
+      - cd packages/contracts/{{.CONTRACT}} && cargo test
 
   off-chain:
     cmds:
       - echo "Testing off-chain"
       - cd packages/tests/off-chain && cargo test
+      - for: { var: ALL_CONTRACTS }
+        cmd: cd packages/contracts/{{.CONTRACT}} && cargo test
