--- a/backend/wavs-home/wavs.toml
+++ b/backend/wavs-home/wavs.toml
@@ -11,20 +11,11 @@ prometheus = "http://localhost:9090"
 # ----------------------------
 
 # Neutron testnet: https://github.com/cosmos/chain-registry/blob/master/testnets/neutrontestnet/chain.json
-# This must match the starship config in `backend/starship/chains.yml`
+# This must match the config in `backend/chains`
 [default.chains.cosmos.pion-1]
 bech32_prefix = "neutron"
-rpc_endpoint = "http://localhost:27657"
+rpc_endpoint = "http://localhost:26657"
 grpc_endpoint = "http://localhost:9090"
-gas_price = 0.025
-gas_denom = "untrn"
-
-[default.chains.dev.docker-pion-1]
-type = "cosmos"
-chain_id = "pion-1"
-bech32_prefix = "neutron"
-rpc_endpoint = "http://host.docker.internal:27657"
-grpc_endpoint = "http://host.docker.internal:9090"
 gas_price = 0.025
 gas_denom = "untrn"
 
