--- a/taskfile/test.yml
+++ b/taskfile/test.yml
@@ -22,7 +22,7 @@ tasks:
       - echo "Testing off-chain"
       - cd packages/tests/off-chain && cargo test
       - for: { var: ALL_CONTRACTS }
-        cmd: cd packages/contracts/{{.CONTRACT}} && cargo test
+        cmd: cd packages/contracts/{{.ITEM}} && cargo test
 
   contract-on-chain:
     requires:
