--- a/packages/tests/on-chain/Cargo.toml
+++ b/packages/tests/on-chain/Cargo.toml
@@ -24,3 +24,4 @@ deadpool = { workspace = true }
 layer-climb = { workspace = true }
 bip39 = { workspace = true }
 rand = { workspace = true }
+layer-climb-proto = { workspace = true }
