--- a/Cargo.toml
+++ b/Cargo.toml
@@ -106,8 +106,9 @@ schemars = "1.0.4"
 serde-json-wasm = "1.0.1"
 
 # WASI
-wstd = "0.5.3"
-wit-bindgen-rt = "0.43.0"
+wstd = "0.6.1"
+wit-bindgen-rt = "0.44.0"
+wit-bindgen = "0.47.0"
 
 # CLI
 clap = { version = "4.5.44", features = ["derive", "env", "string"] }
