--- a/packages/components/aggregator/Cargo.toml
+++ b/packages/components/aggregator/Cargo.toml
@@ -18,10 +18,7 @@ wit-bindgen-rt = { workspace = true }
 thiserror = { workspace = true }
 cosmwasm-std = { workspace = true }
 wavs-types = {workspace = true}
+wit-bindgen = {workspace = true}
 
 [lib]
 crate-type = ["cdylib"]
-
-[package.metadata.component]
-package = "component:tg-component-aggregator"
-target = "wavs:operator/wavs-world@2.0.0"
