--- a/Cargo.toml
+++ b/Cargo.toml
@@ -56,7 +56,7 @@ async-trait = "0.1.88"
 futures = "0.3.31"
 
 # http
-reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls-webpki-roots"] }
+reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls-webpki-roots", "multipart"] }
 
 # pool management
 deadpool = "0.12.2"
