--- a/taskfile/config.yml
+++ b/taskfile/config.yml
@@ -30,6 +30,8 @@ vars:
   WAVS_BASE_PORT: 8123 # Base port for WAVS, subsequent ports will be incremented by 1 for each instance
   # Changing this requires a change in `packages/tests/on-chain/src/client/config.rs`
   WAVS_AGGREGATOR_PORT: 8200
+  IPFS_API_PORT: 8300
+  IPFS_GATEWAY_PORT: 8301
 
   DOCKER_SUDO:
     sh: |
@@ -44,3 +46,4 @@ vars:
   WAVS_CW_MIDDLEWARE_DOCKER_IMAGE: 'ghcr.io/lay3rlabs/cw-middleware:0.2.0-alpha.5{{if eq .ARCH "arm64"}}-arm64{{end}}'
   JAEGER_DOCKER_IMAGE: "jaegertracing/jaeger:2.5.0"
   PROMETHEUS_DOCKER_IMAGE: "prom/prometheus:v3.3.0"
+  IPFS_DOCKER_IMAGE: "ipfs/kubo:v0.38.1"
