--- a/taskfile/deploy.yml
+++ b/taskfile/deploy.yml
@@ -1,6 +1,64 @@
 version: "3"
 
 tasks:
+  all:
+    cmds:
+      - task: middleware-service-manager-upload
+        vars:
+          FILENAME: service-manager-code-id.json
+      - task: middleware-stake-registry-upload
+        vars:
+          FILENAME: stake-registry-code-id.json
+      - task: middleware-instantiate
+        vars:
+          MANAGER_CODE_ID:
+            sh: cat "{{.DEPLOYMENTS_ARTIFACTS_PATH}}/service-manager-code-id.json" | jq -r '.code_id'
+          REGISTRY_CODE_ID:
+            sh: cat "{{.DEPLOYMENTS_ARTIFACTS_PATH}}/stake-registry-code-id.json" | jq -r '.code_id'
+          FILENAME: middleware.json
+      - task: contract-upload
+        vars:
+          CONTRACT: payments
+          FILENAME: payments-code-id.json
+      - task: contract-instantiate-payments
+        vars:
+          CODE_ID:
+            sh: cat "{{.DEPLOYMENTS_ARTIFACTS_PATH}}/payments-code-id.json" | jq -r '.code_id'
+          FILENAME: payments.json
+      - task: component-upload
+        vars:
+          COMPONENT: operator
+          FILENAME: operator-cid.json
+      - task: component-upload
+        vars:
+          COMPONENT: aggregator
+          FILENAME: aggregator-cid.json
+      - task: service-upload
+        vars:
+          CONTRACT_PAYMENTS: "{{.DEPLOYMENTS_ARTIFACTS_PATH}}/payments.json"
+          MIDDLEWARE: "{{.DEPLOYMENTS_ARTIFACTS_PATH}}/middleware.json"
+          COMPONENT_OPERATOR: "{{.DEPLOYMENTS_ARTIFACTS_PATH}}/operator-cid.json"
+          COMPONENT_AGGREGATOR: "{{.DEPLOYMENTS_ARTIFACTS_PATH}}/aggregator-cid.json"
+          FILENAME: service-cid.json
+      - task: middleware-set-service-uri
+        vars:
+          ADDR:
+            sh: cat "{{.DEPLOYMENTS_ARTIFACTS_PATH}}/service-cid.json" | jq -r '.service.manager.cosmos.address'
+          URI:
+            sh: cat "{{.DEPLOYMENTS_ARTIFACTS_PATH}}/service-cid.json" | jq -r '.gateway_url'
+      - task: aggregator-register-service
+        vars:
+          ADDR:
+            sh: cat "{{.DEPLOYMENTS_ARTIFACTS_PATH}}/service-cid.json" | jq -r '.service.manager.cosmos.address'
+      - task: operator-add-service
+        vars:
+          ADDR:
+            sh: cat "{{.DEPLOYMENTS_ARTIFACTS_PATH}}/service-cid.json" | jq -r '.service.manager.cosmos.address'
+
+  clean:
+    cmds:
+      - rm -rf "{{.DEPLOYMENTS_ARTIFACTS_PATH}}"
+
   contract-upload:
     deps: [assert-account-exists]
     requires:
@@ -16,6 +74,25 @@ tasks:
       - cd packages/cli && cargo run instantiate-payments --output-filename={{.FILENAME}} --code-id={{.CODE_ID}}
 
   tap-faucet:
+    cmds:
+      - task: inner-tap-faucet
+        vars:
+          MNEMONIC: "CLI_MNEMONIC"
+
+  tap-faucet-all:
+    cmds:
+      - for: { var: ALL_MNEMONICS_TO_FUND }
+        task: inner-tap-faucet
+        vars:
+          MNEMONIC: "{{.ITEM}}"
+
+  inner-tap-faucet:
+    internal: true
+    vars:
+      MNEMONIC_VALUE:
+        sh: echo "${{.MNEMONIC}}"
+    env:
+      CLI_MNEMONIC: "{{.MNEMONIC_VALUE}}"
     cmds:
       - cd packages/cli && cargo run faucet-tap
 
@@ -105,7 +182,7 @@ tasks:
       AGGREGATOR_URL: "http://127.0.0.1:{{.WAVS_AGGREGATOR_PORT}}"
     cmds:
       - >
-      - cd packages/cli && cargo run upload-service
+        cd packages/cli && cargo run upload-service
         --output-filename={{.FILENAME}}
         --ipfs-api-url {{.IPFS_API_URL}}
         --ipfs-gateway-url {{.IPFS_GATEWAY_URL}}
@@ -113,7 +190,58 @@ tasks:
         --middleware-instantiation-file "{{.MIDDLEWARE}}"
         --component-operator-cid-file "{{.COMPONENT_OPERATOR}}"
         --component-aggregator-cid-file "{{.COMPONENT_AGGREGATOR}}"
+        --cron-schedule "{{.SERVICE_CRON_SCHEDULE}}"
         --aggregator-url {{.AGGREGATOR_URL}}
+
+  middleware-set-service-uri:
+    deps: [assert-account-exists]
+    requires:
+      vars: [ADDR, URI]
+    cmds:
+      - >
+        docker run --rm
+        --network host
+        -v "{{.WAVS_HOME_DIR}}":/wavs-home:ro
+        -v "{{.DEPLOYMENTS_ARTIFACTS_PATH}}":/output
+        -e CHAIN_KEY="{{.CHAIN_KEY}}"
+        -e WAVS_HOME="/wavs-home"
+        -e CLI_MNEMONIC="{{.CLI_MNEMONIC}}"
+        {{.WAVS_CW_MIDDLEWARE_DOCKER_IMAGE}}
+        service-manager set-service-uri
+        --address "{{.ADDR}}"
+        --uri "{{.URI}}"
+
+  aggregator-register-service:
+    requires:
+      vars: [ADDR]
+    vars:
+      AGGREGATOR_URL: "http://127.0.0.1:{{.WAVS_AGGREGATOR_PORT}}"
+    cmds:
+      - >
+        cd packages/cli && cargo run aggregator-register-service
+        --aggregator-url {{.AGGREGATOR_URL}}
+        --service-manager-address "{{.ADDR}}"
+
+  operator-add-service:
+    vars:
+      OPERATORS_RANGE:
+        sh: seq 1 {{.OPERATORS | default "1"}}
+    cmds:
+      - for: { var: OPERATORS_RANGE }
+        task: operator-add-service-{{.ITEM}}-{{.ADDR}}
+
+  operator-add-service-*-*:
+    vars:
+      WAVS_INSTANCE: "{{index .MATCH 0}}"
+      ADDR: "{{index .MATCH 1}}"
+      WAVS_PORT:
+        sh: task backend:get-wavs-operator-port-{{.WAVS_INSTANCE}}
+      WAVS_URL: "http://127.0.0.1:{{.WAVS_PORT}}"
+    cmds:
+      - >
+        cd packages/cli && cargo run operator-add-service
+        --wavs-url {{.WAVS_URL}}
+        --service-manager-address "{{.ADDR}}"
 
   assert-account-exists:
     cmds:
