--- a/.example.env
+++ b/.example.env
@@ -1,2 +1,5 @@
 RUST_LOG="info"
-CLI_MNEMONIC="aware ribbon width citizen early nation happy arrest security develop rocket wet cannon tail book solid same replace solve athlete rapid stone cram slogan"
+CLI_MNEMONIC=""
+WAVS_OPERATOR_MNEMONIC_1=""
+WAVS_OPERATOR_MNEMONIC_2=""
+WAVS_AGGREGATOR_COSMOS_CREDENTIAL=""
