--- a/backend/docker/wavs-aggregator.yml
+++ b/backend/docker/wavs-aggregator.yml
@@ -5,8 +5,15 @@ services:
     image: "${COMPOSE_WAVS_DOCKER_IMAGE:-}"
     stop_signal: SIGKILL
     environment:
-      - WAVS_AGGREGATOR_COSMOS_MNEMONIC=${WAVS_AGGREGATOR_COSMOS_MNEMONIC:-}
-    command: ["wavs-aggregator", "--home", "/wavs-home", "--port", "${COMPOSE_WAVS_AGGREGATOR_PORT:-}"]
+      - WAVS_AGGREGATOR_COSMOS_CREDENTIAL=${WAVS_AGGREGATOR_COSMOS_CREDENTIAL:-}
+    command:
+      [
+        "wavs-aggregator",
+        "--home",
+        "/wavs-home",
+        "--port",
+        "${COMPOSE_WAVS_AGGREGATOR_PORT:-}",
+      ]
     volumes:
       - "${COMPOSE_WAVS_HOME:-}:/wavs-home"
     network_mode: "host"
