--- a/backend/docker/wavs-operator.yml
+++ b/backend/docker/wavs-operator.yml
@@ -4,11 +4,19 @@ services:
     container_name: "${COMPOSE_PROJECT_NAME:-}"
     stop_signal: SIGKILL
     environment:
-      - WAVS_COSMOS_SUBMISSION_MNEMONIC=${WAVS_COSMOS_SUBMISSION_MNEMONIC:-}
-      - WAVS_SUBMISSION_MNEMONIC=${WAVS_SUBMISSION_MNEMONIC:-}
+      - WAVS_SUBMISSION_MNEMONIC=${WAVS_OPERATOR_MNEMONIC:-}
       - RUST_LOG=${WAVS_LOG_LEVEL:-}
       - WAVS_LOG_LEVEL=${WAVS_LOG_LEVEL:-}
-    command: ["wavs", "--home", "/wavs-home", "--data", "/var/${COMPOSE_PROJECT_NAME:-}", "--port", "${COMPOSE_WAVS_PORT:-}"]
+    command:
+      [
+        "wavs",
+        "--home",
+        "/wavs-home",
+        "--data",
+        "/var/${COMPOSE_PROJECT_NAME:-}",
+        "--port",
+        "${COMPOSE_WAVS_PORT:-}",
+      ]
     volumes:
       - "${COMPOSE_WAVS_HOME:-}:/wavs-home"
     network_mode: "host"
