--- a/taskfile/components.yml
+++ b/taskfile/components.yml
@@ -9,7 +9,9 @@ tasks:
   clean-all:
     cmds:
       - for: { var: ALL_COMPONENTS }
-        cmd: task components:clean COMPONENT={{.ITEM}}
+        task: clean
+        vars:
+          COMPONENT: "{{ .ITEM }}"
       - echo "Cleaning artifacts directory"
       - |
         rm -rf "{{.COMPONENTS_ARTIFACTS_PATH}}"
@@ -27,7 +29,9 @@ tasks:
   build-all:
     cmds:
       - for: { var: ALL_COMPONENTS }
-        cmd: task components:build COMPONENT={{.ITEM}}
+        task: build
+        vars:
+          COMPONENT: "{{.ITEM}}"
 
   build:
     requires:
@@ -57,7 +61,9 @@ tasks:
   clean-wit-all:
     cmds:
       - for: { var: ALL_COMPONENTS }
-        task: clean-wit-{{.ITEM}}
+        task: clean-wit
+        vars:
+          COMPONENT: "{{.ITEM}}"
 
   clean-wit:
     requires:
@@ -70,6 +76,8 @@ tasks:
     cmds:
       - for: { var: ALL_COMPONENTS }
         task: fetch-wit-{{.ITEM}}
+        vars:
+          COMPOMENT: "{{.ITEM}}"
 
   fetch-wit:
     requires:
