--- a/taskfile/contracts.yml
+++ b/taskfile/contracts.yml
@@ -9,7 +9,9 @@ tasks:
   clean-all:
     cmds:
       - for: { var: ALL_CONTRACTS }
-        cmd: task contracts:clean CONTRACT={{.ITEM}}
+        task: clean
+        vars:
+          CONTRACT: "{{.ITEM}}"
       - echo "Cleaning artifacts directory"
       - |
         rm -rf "{{.CONTRACTS_ARTIFACTS_PATH}}"
@@ -29,7 +31,9 @@ tasks:
   build-all:
     cmds:
       - for: { var: ALL_CONTRACTS }
-        cmd: task contracts:build CONTRACT={{.ITEM}}
+        task: build
+        vars:
+          CONTRACT: "{{.ITEM}}"
 
   build:
     requires:
