--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,7 @@
     "@walletconnect/sign-client": "^2.22.4",
     "@walletconnect/types": "^2.22.4",
     "@walletconnect/utils": "^2.22.4",
+    "buffer": "^6.0.3",
     "react": "^19.1.1",
     "react-dom": "^19.1.1"
   },
